$Id: Changelog,v 1.2 2010-06-20 05:59:50 oops Exp $

python KRISP Module Changelog


*2.0.0
--------------------------------------------------------------------------------
Sun Jun 20 2010
by JoungKyun.Kim <http://oops.org>
	- 2.0 tree start
	- require over libkrisp 3.x


*1.0.0
--------------------------------------------------------------------------------
Tue Apr 30 2008
by JoungKyun.Kim <http://oops.org>
	- 1.0.0 release