@@ -1,5 +1,5 @@
 
-# $Id: addon.py.sample,v 1.3 2010-06-20 18:20:17 oops Exp $
+# $Id: addon.py.sample,v 1.4 2010-06-20 18:28:32 oops Exp $
 
 def modversion () :
 	return '2.0.0'
@@ -15,6 +15,10 @@ def long2ip (longip) :
 
     ip.reverse ()
     return '.'.join (map (str, ip))
+
+def mask2prefix (mask) :
+	lmask = _krisp.ip2long (mask);
+	return _krisp.long2prefix (lmask);
 
 from copy import deepcopy
 
