@@ -1,10 +1,15 @@
-$Id: Changelog,v 1.2 2010-06-20 05:59:50 oops Exp $
+$Id: Changelog,v 1.3 2010-06-20 18:28:32 oops Exp $
 
 python KRISP Module Changelog
 
 
 *2.0.0
 --------------------------------------------------------------------------------
+Mon Jun 21 2010
+by JoungKyun.Kim <http://oops.org>
+	- fixed error message processing on search(_ex) api
+	- add mask2prefix method
+
 Sun Jun 20 2010
 by JoungKyun.Kim <http://oops.org>
 	- 2.0 tree start
